[metadata]
name = splane-agalbachicar
version = 0.0.3
author = Mariano Llamedo, Agustin Alba Chicar
author_email = ag.albachicar@gmail.com
description = Extension to scipy.signal with analog and digital filter design tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agalbachicar/splane
project_urls =
    Bug Tracker = https://github.com/agalbachicar/splane/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
install_requires =
    numpy
    scipy
    matplotlib
    simpy

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
